--- a/menu/src/index.css
+++ b/menu/src/index.css
@@ -5,9 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll; /*Force scrollbar to fix centering issue when it's wasn't displayed and then displayed by another category*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/*Custom Scrollbar*/
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(2, 34, 46, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(95, 95, 95);
+}
+
+/*Custom Scrollbar for Firefox*/
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(95, 95, 95) rgba(2, 34, 46, 0); /*Thumb Track*/
 }
